script/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-demo
  namespace: project1
  labels:
    app: server
spec:
  containers:
  - name: nginx-container
    image: nginx
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      requests:
        memory: "64Mi"
        cpu: "512m"
      limits:
        memory: "128Mi"
        cpu: "1024m"
