script/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace:  project1
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: LoadBalancer
