script/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-nginx-ingress
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
